flood.io (archived on 2017-06-02)
{
  "alexa_rank": 350713,
  "analysis_subcorpus": true,
  "categories": "business;informationtech",
  "char_count": 10975,
  "classifier_probability": 0.99,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 13.88,
  "homepage_snapshot_redirected_domain": "flood.io",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20170421142757id_/http://flood.io/",
  "homepage_snapshot_url": "https://web.archive.org/web/20170421142757id_/http%3A//flood.io",
  "interval": "2017_A",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "flood.io",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20170602210558id_/http%3A//flood.io/privacy",
  "policy_title": "Flood IO: Privacy",
  "policy_url": "flood.io/privacy",
  "sha1": "058b27cfae7713c397cf80ac66aa76efd44e4493",
  "simhash": 5219358385641351672,
  "simhash_updated": false,
  "site_hostname": "flood.io",
  "site_url": "http://flood.io",
  "smog": 15.95,
  "strict_updated": false,
  "timestamp": "20170602210558",
  "word_count": 1715,
  "year": 2017
}

--- a/f/fl/flo/flood.io.html
+++ b/f/fl/flo/flood.io.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the flood.io privacy policy that was archived on 2016-10-31.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20161031054939id_/http%3A//flood.io/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the flood.io privacy policy that was archived on 2017-06-02.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170602210558id_/http%3A//flood.io/privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html lang="en"><head>
 <meta charset="utf-8">
@@ -10,8 +10,8 @@
 <title>
 Flood IO: Privacy
 </title>
-<link rel="stylesheet" media="screen" href="https://d3gz8szwkk2g10.cloudfront.net/assets/landing-8d65b4b57a6a516660d113aceaf5ea17.css">
-<script type="text/javascript" async="" src="https://widget.intercom.io/widget/klee185u"></script><script async="" src="//connect.facebook.net/en_US/fbevents.js"></script><script async="" src="//www.google-analytics.com/analytics.js"></script><script src="https://d3gz8szwkk2g10.cloudfront.net/assets/modernizr-50708e094645e677c7130d3df1df71e0.js"></script>
+<link rel="stylesheet" media="screen" href="https://d3gz8szwkk2g10.cloudfront.net/assets/landing-0ab3f15b0f554f9cbec14795caa3c485.css">
+<script type="text/javascript" async="" src="https://widget.intercom.io/widget/klee185u"></script><script async="" src="//www.google-analytics.com/analytics.js"></script><script src="https://d3gz8szwkk2g10.cloudfront.net/assets/modernizr-96d11e9386b6860c9dd4b819094946de.js"></script>
 <script src="https://use.typekit.net/ren2tjl.js"></script>
 <script>
   try{Typekit.load({ async: true });}catch(e){}
@@ -54,7 +54,7 @@ Flood IO: Privacy
    ga('send', 'pageview');
 
 
-</script><script async="true" type="text/javascript" src="https://s.adroll.com/j/roundtrip.js"></script></head>
+</script></head>
 <body class="landing privacy">
 <header class="Header Header--global">
   <div class="Container Container--header">
@@ -67,11 +67,9 @@ Flood IO: Privacy
       </ul>
 
       <ul class="right">
-        <li><a class="" href="https://blog.flood.io">Blog</a></li>
-        <li><a class="" href="https://help.flood.io">Documentation</a></li>
-
-          <li><a class="" href="/users/sign_in">Sign In</a></li>
-          <li><a class="Button" href="/sign-up">Get Started</a></li>
+        <li><a class="" href="https://help.flood.io">Help</a></li>
+        <li><a class="" href="/app">Dashboard</a></li>
+        <li><a class="Button" href="/sign-up">Get Started</a></li>
       </ul>
     </nav>
   </div>
@@ -271,7 +269,7 @@ Address: GPO Box 5218, Sydney NSW 2001
         <h3>Features</h3>
         <ul>
           <li><a href="/">Overview</a></li>
-          <li><a href="/pricing">Amazon API Gateway</a></li>
+          <li><a href="/integrations/amazon-api-gateway">Integrations</a></li>
           <li><a href="/users/sign_in">Dashboard</a></li>
         </ul>
       </section>
@@ -279,18 +277,19 @@ Address: GPO Box 5218, Sydney NSW 2001
       <section class="Grid-cell">
         <h3>Company</h3>
         <ul>
-          <li><a href="https://smoothscaling.com">SmoothScaling Blog</a></li>
+          <li><a href="https://smoothscaling.com">Smooth Scaling</a></li>
+          <li><a href="https://status.flood.io">Status</a></li>
           <li><a href="https://help.flood.io">Help</a></li>
-          <li><a href="/request-live-demo">Request a demo</a></li>
+          <li><a href="https://flood-io.github.io/api-docs/">API</a></li>
         </ul>
       </section>
 
       <section class="Grid-cell">
         <h3>Success Stories</h3>
         <ul>
-          <li><a href="https://flood.io/blog/49-load-testing-dns">Load Testing DNS</a></li>
-          <li><a href="https://flood.io/blog/42-how-to-run-one-million-users">Simulating 1 Million Users</a></li>
-          <li><a href="https://flood.io/blog/39-load-testing-a-restful-api-with-ruby-jmeter">Load Testing APIs</a></li>
+          <li><a href="http://rea.tech/using-our-everyday-dev-tools-for-effective-load-and-performance-testing/">Everyday Dev Tools for Load Testing</a></li>
+          <li><a href="https://www.rallyhealth.com/building-a-bigger-airplane-while-youre-flying/">5 Million Users without a Hitch</a></li>
+          <li><a href="http://flood-io.github.io/showandtell/stpcon/deck/#/how-to-scale">Scaling to 1 Million Requests per Second</a></li>
         </ul>
       </section>
 
@@ -308,7 +307,7 @@ Address: GPO Box 5218, Sydney NSW 2001
     <section class="Footer__License">
       <div>
         <p class="license">
-          Copyright © 2016 Flood IO Pty Ltd.
+          Copyright © 2017 Flood IO Pty Ltd.
         </p>
         <p class="license">
           ABN 30 164 837 352
@@ -335,54 +334,32 @@ Address: GPO Box 5218, Sydney NSW 2001
     <span itemprop="addressLocality">Sydney</span>,
     <span itemprop="addressRegion">NSW, 2060</span>.
   </div>
-
 </div>
 
-<script src="https://d3gz8szwkk2g10.cloudfront.net/assets/landing-4bcc91446f56d48df20231ec2be33c47.js"></script>
+<script src="https://d3gz8szwkk2g10.cloudfront.net/assets/landing-56c454276e831db397d85c0eb5973753.js"></script>
 
-<script src="//platform.twitter.com/oct.js" type="text/javascript"></script>
+<!-- = render "tracking_adroll" -->
+<!-- = render "tracking_facebook" -->
+<!-- Google Code for Flood Signups Conversion Page -->
 <script type="text/javascript">
-twttr.conversion.trackPid('l64pz', { tw_sale_amount: 0, tw_order_quantity: 1 });</script>
+/* <![CDATA[ */
+var google_conversion_id = 853073371;
+var google_conversion_language = "en";
+var google_conversion_format = "3";
+var google_conversion_color = "ffffff";
+var google_conversion_label = "wBQ9CMTagnEQ27vjlgM";
+var google_conversion_value = 0.00;
+var google_conversion_currency = "AUD";
+var google_remarketing_only = false;
+/* ]]> */
+</script>
+<script type="text/javascript" src="//www.googleadservices.com/pagead/conversion.js">
+</script>
 <noscript>
-<img height="1" width="1" style="display:none;" alt="" src="https://analytics.twitter.com/i/adsct?txn_id=l64pz&p_id=Twitter&tw_sale_amount=0&tw_order_quantity=0" />
-<img height="1" width="1" style="display:none;" alt="" src="//t.co/i/adsct?txn_id=l64pz&p_id=Twitter&tw_sale_amount=0&tw_order_quantity=0" /></noscript>
-
-<script type="text/javascript">
-adroll_adv_id = "QO5TCVGJIJAG7MJM7YYG6V";
-adroll_pix_id = "IAR6FDDMIJBQRCVUWLUBO3";
-(function () {
-var oldonload = window.onload;
-window.onload = function(){
-   __adroll_loaded=true;
-   var scr = document.createElement("script");
-   var host = (("https:" == document.location.protocol) ? "https://s.adroll.com" : "http://a.adroll.com");
-   scr.setAttribute('async', 'true');
-   scr.type = "text/javascript";
-   scr.src = host + "/j/roundtrip.js";
-   ((document.getElementsByTagName('head') || [null])[0] ||
-    document.getElementsByTagName('script')[0].parentNode).appendChild(scr);
-   if(oldonload){oldonload()}};
-}());
-</script>
-
-<!-- Facebook Pixel Code -->
-<script>
-!function(f,b,e,v,n,t,s){if(f.fbq)return;n=f.fbq=function(){n.callMethod?
-n.callMethod.apply(n,arguments):n.queue.push(arguments)};if(!f._fbq)f._fbq=n;
-n.push=n;n.loaded=!0;n.version='2.0';n.queue=[];t=b.createElement(e);t.async=!0;
-t.src=v;s=b.getElementsByTagName(e)[0];s.parentNode.insertBefore(t,s)}(window,
-document,'script','//connect.facebook.net/en_US/fbevents.js');
-
-fbq('init', '204596803224600');
-fbq('track', "PageView");
-fbq('track', 'ViewContent');
-fbq('track', 'Lead');
-fbq('track', 'CompleteRegistration');
-</script>
-<noscript><img height="1" width="1" style="display:none"
-src="https://www.facebook.com/tr?id=204596803224600&ev=PageView&noscript=1"
-/></noscript>
-<!-- End Facebook Pixel Code -->
+<div style="display:inline;">
+<img height="1" width="1" style="border-style:none;" alt="" src="//www.googleadservices.com/pagead/conversion/853073371/?value=0.00&amp;currency_code=AUD&amp;label=wBQ9CMTagnEQ27vjlgM&amp;guid=ON&amp;script=0"/>
+</div>
+</noscript>
 
 <script>
   window.intercomSettings = {
