globosapiens.net (archived on 2017-06-02)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "business;education;travel",
  "char_count": 11901,
  "classifier_probability": 0.97,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 11.41,
  "homepage_snapshot_redirected_domain": "globosapiens.net",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20170303093047id_/http://www.globosapiens.net/",
  "homepage_snapshot_url": "https://web.archive.org/web/20170303093047id_/http%3A//globosapiens.net",
  "interval": "2017_A",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "globosapiens.net",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20170602234532id_/http%3A//www.globosapiens.net/about/080000.html",
  "policy_title": "GLOBOsapiens - Privacy Policy",
  "policy_url": "globosapiens.net/about/080000.html",
  "sha1": "2b9ab6dad89d85b64d2081aa3f77824195148cb9",
  "simhash": 2488959262726869835,
  "simhash_updated": false,
  "site_hostname": "globosapiens.net",
  "site_url": "http://globosapiens.net",
  "smog": 13.71,
  "strict_updated": false,
  "timestamp": "20170602234532",
  "word_count": 1963,
  "year": 2017
}

--- a/g/gl/glo/globosapiens.net.html
+++ b/g/gl/glo/globosapiens.net.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the globosapiens.net privacy policy that was archived on 2016-11-13.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20161113125410id_/http%3A//www.globosapiens.net/about/080000.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the globosapiens.net privacy policy that was archived on 2017-06-02.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170602234532id_/http%3A//www.globosapiens.net/about/080000.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head>
 	<title>GLOBOsapiens - Privacy Policy</title>	
@@ -17,7 +17,7 @@
 		<meta name="revisit-after" content="14 days">	
 		<link rel="shortcut icon" href="/favicon.ico">	
 
-	<link rel="stylesheet" type="text/css" href="/app_global/dsp_format.css?1460652524">
+	<link rel="stylesheet" type="text/css" href="/app_global/dsp_format.css?1488040851">
 	<script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script><script id="facebook-jssdk" src="//connect.facebook.net/de_DE/all.js#xfbml=1"></script><script src="/app_global/act_functions.js" type="text/javascript"></script>
 	<link rel="stylesheet" type="text/css" href="/app_global/menu_styles.css">
 	<script type="text/javascript" src="/app_global/menu.js"></script>
@@ -259,15 +259,21 @@ function mySubmit() {
 					<table cellpadding="0" cellspacing="0" width="107">
 
 		<tbody><tr>
-			<td width="16" height="9"><img src="/subapp_countries/app_data/flags/icons/poland-flag.gif" width="14" height="9" alt=""></td>
-			<td width="*" class="community"><img src=" /g/p/t.gif" width="2" height="1" alt=""><a href="http://www.globosapiens.net/wojtekd" title="click to display wojtekd's travel website" target="_top" class="community_button" rel="nofollow">wojtekd</a></td>
-			<td align="right" width="30" height="14" class="community">40</td>
+			<td width="16" height="9"><img src="/subapp_countries/app_data/flags/icons/united-kingdom-flag.gif" width="14" height="9" alt=""></td>
+			<td width="*" class="community"><img src=" /g/p/t.gif" width="2" height="1" alt=""><a href="http://www.globosapiens.net/pictor" title="click to display pictor's travel website" target="_top" class="community_button" rel="nofollow">pictor</a></td>
+			<td align="right" width="30" height="14" class="community">127</td>
 		</tr>		
 	
 		<tr>
 			<td width="16" height="9"><img src="/subapp_countries/app_data/flags/icons/united-kingdom-flag.gif" width="14" height="9" alt=""></td>
-			<td width="*" class="community"><img src=" /g/p/t.gif" width="2" height="1" alt=""><a href="http://www.globosapiens.net/pictor" title="click to display pictor's travel website" target="_top" class="community_button" rel="nofollow">pictor</a></td>
-			<td align="right" width="30" height="14" class="community">30</td>
+			<td width="*" class="community"><img src=" /g/p/t.gif" width="2" height="1" alt=""><a href="http://www.globosapiens.net/mistybleu" title="click to display mistybleu's travel website" target="_top" class="community_button" rel="nofollow">mistybl.</a></td>
+			<td align="right" width="30" height="14" class="community">123</td>
+		</tr>		
+	
+		<tr>
+			<td width="16" height="9"><img src="/subapp_countries/app_data/flags/icons/poland-flag.gif" width="14" height="9" alt=""></td>
+			<td width="*" class="community"><img src=" /g/p/t.gif" width="2" height="1" alt=""><a href="http://www.globosapiens.net/wojtekd" title="click to display wojtekd's travel website" target="_top" class="community_button" rel="nofollow">wojtekd</a></td>
+			<td align="right" width="30" height="14" class="community">20</td>
 		</tr>		
 	</tbody></table></div></td></tr>
 	<tr>
@@ -291,13 +297,13 @@ function mySubmit() {
 		<tr>
 			<td width="16" height="9"><img src="/subapp_countries/app_data/flags/icons/united-kingdom-flag.gif" width="14" height="9" alt=""></td>
 			<td width="*" class="community"><img src=" /g/p/t.gif" width="2" height="1" alt=""><a href="http://www.globosapiens.net/mistybleu" title="click to display mistybleu's travel website" target="_top" class="community_button" rel="nofollow">mistybl.</a></td>
-			<td align="right" width="30" height="14" class="community">50627</td>
+			<td align="right" width="30" height="14" class="community">51348</td>
 		</tr>		
 	
 		<tr>
 			<td width="16" height="9"><img src="/subapp_countries/app_data/flags/icons/poland-flag.gif" width="14" height="9" alt=""></td>
 			<td width="*" class="community"><img src=" /g/p/t.gif" width="2" height="1" alt=""><a href="http://www.globosapiens.net/wojtekd" title="click to display wojtekd's travel website" target="_top" class="community_button" rel="nofollow">wojtekd</a></td>
-			<td align="right" width="30" height="14" class="community">47279</td>
+			<td align="right" width="30" height="14" class="community">49667</td>
 		</tr>		
 	</tbody></table></div></td></tr>
 
@@ -309,7 +315,7 @@ function mySubmit() {
 									<tr>
 										<td width="120" height="28">
 										<div class="space" style="z-index:50;position:relative;top:-90px;">
-								<a href="http://www.globosapiens.net/erwila" rel="nofollow"><img src="/data/memberpix/mini/erwila-162.jpg" border="0" width="22" height="28" alt=""></a><a href="http://www.globosapiens.net/delfster" rel="nofollow"><img src="/data/memberpix/mini/delfster.jpg" border="0" width="22" height="28" alt=""></a><a href="http://www.globosapiens.net/thalmann" rel="nofollow"><img src="/data/memberpix/mini/thalmann-530.jpg" border="0" width="22" height="28" alt=""></a><a href="http://www.globosapiens.net/flint1956" rel="nofollow"><img src="/data/memberpix/mini/flint1956.jpg" border="0" width="22" height="28" alt=""></a><a href="http://www.globosapiens.net/krtujo" rel="nofollow"><img src="/data/memberpix/mini/krtujo-594.jpg" border="0" width="22" height="28" alt=""></a>
+								<a href="http://www.globosapiens.net/seajay" rel="nofollow"><img src="/data/memberpix/mini/seajay.jpg" border="0" width="22" height="28" alt=""></a><a href="http://www.globosapiens.net/dansan" rel="nofollow"><img src="/data/memberpix/mini/dansan.jpg" border="0" width="22" height="28" alt=""></a><a href="http://www.globosapiens.net/victorsglobe" rel="nofollow"><img src="/data/memberpix/mini/victorsglobe.jpg" border="0" width="22" height="28" alt=""></a><a href="http://www.globosapiens.net/kit_katz" rel="nofollow"><img src="/data/memberpix/mini/kit_katz-312.jpg" border="0" width="22" height="28" alt=""></a><a href="http://www.globosapiens.net/amybare" rel="nofollow"><img src="/data/memberpix/mini/amybare-524.jpg" border="0" width="22" height="28" alt=""></a>
 											</div>
 										</td>
 									</tr>	
@@ -435,7 +441,7 @@ Please do also read our <a href="/about/090000.html" title="Terms And Conditions
 							&nbsp;&nbsp;&nbsp;<a href="/about/0I0000.html" class="community_button" rel="nofollow">Impressum</a>					
 							<br>
 							<span class="community_text_s" id="nointelliTXT">
-								&nbsp;&nbsp;©&nbsp;2002&nbsp;-&nbsp;2016&nbsp;Findix Technologies GmbH Germany&nbsp;&nbsp;&nbsp;&nbsp;Travel Portal Version:&nbsp;4.2.6 <br><br>
+								&nbsp;&nbsp;©&nbsp;2002&nbsp;-&nbsp;2017&nbsp;Findix Technologies GmbH Germany&nbsp;&nbsp;&nbsp;&nbsp;Travel Portal Version:&nbsp;4.2.6 <br><br>
 							
 							</span>
 						</td>
@@ -493,7 +499,7 @@ for(var i = 0; i < elements.length; i++) {
   })();
 
 </script>
-<!--GLOBOsapiens served you in 0.011967897415161 seconds-->
+<!--GLOBOsapiens served you in 0.015642881393433 seconds-->
 	
 	
 </body></html>
