--- a/a/aa/aar/aarkcollective.com.html
+++ b/a/aa/aar/aarkcollective.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the aarkcollective.com privacy policy that was archived on 2016-12-24.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20161224092355id_/https%3A//aarkcollective.com/support) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the aarkcollective.com privacy policy that was archived on 2017-06-03.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170603005632id_/https%3A//aarkcollective.com/support) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html lang="en" class="no-js"><!--<![endif]--><head>
     <meta charset="utf-8">
@@ -12,7 +12,7 @@
 
     <!-- Styles -->
     <link href="/assets/css/font-awesome.min.css" rel="stylesheet">
-    <link href="/css?v=pbWZ8LDlj6nmRQ6Xq-ln2AsedwC2W0HuZmby9ttTHdM1" rel="stylesheet">
+    <link href="/css?v=EMDqpwD--NB659BjeqkRBmRo0q-kVkYqfyX_ro51J1o1" rel="stylesheet">
 
 
     <!--
@@ -140,7 +140,7 @@
 <div class="col-md-3 col-md-offset-3 col-xs-10 col-xs-offset-1">
                             <p>AÃRK Collective Pty Ltd</p>
                             <p>
-                                94 / 604 St Kilda Rd<br>
+                                St Kilda Rd<br>
                                 Melbourne, VIC 3004<br>
                                 Australia
                             </p>
@@ -233,6 +233,9 @@ Overnight / Trackable<br>
                     </div>
                     <div class="col-sm-10 col-sm-offset-1 content" data-id="product-manuals">
                         <div class="row product-manuals">
+                                <div class="col-md-4 col-xs-6 icon">
+                                    <a href="https://aarkcollective.com/manuals/aark_multi_manual.pdf" target="_blank" class="multi text-hide">Download Multi Manual</a>
+                                </div>
                                 <div class="col-md-4 col-xs-6 icon">
                                     <a href="https://aarkcollective.com/manuals/aark_shell_manual.pdf" target="_blank" class="shell text-hide">Download Shell Manual</a>
                                 </div>
