--- a/y/yo/you/youngsexparties.com.html
+++ b/y/yo/you/youngsexparties.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the youngsexparties.com privacy policy that was archived on 2016-11-23.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20161123123650id_/http%3A//youngsexparties.com/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the youngsexparties.com privacy policy that was archived on 2017-06-03.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170603043358id_/http%3A//www.youngsexparties.com/privacy.html) for the most accurate reproduction.-->
 
 <html><head>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
