instructure.com (archived on 2017-06-03)
{
  "alexa_rank": 376,
  "analysis_subcorpus": true,
  "categories": "business;education",
  "char_count": 15137,
  "classifier_probability": 1.0,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 12.24,
  "homepage_snapshot_redirected_domain": "instructure.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20170405072455id_/https://www.instructure.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20170405072455id_/http%3A//instructure.com",
  "interval": "2017_A",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "instructure.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20170603044644id_/https%3A//www.instructure.com/policies/privacy",
  "policy_title": "Privacy",
  "policy_url": "instructure.com/policies/privacy",
  "sha1": "7286e7076b3468eb0496ffdd7248bebb8ef0f531",
  "simhash": 1874751627730352679,
  "simhash_updated": false,
  "site_hostname": "instructure.com",
  "site_url": "http://instructure.com",
  "smog": 15.47,
  "strict_updated": false,
  "timestamp": "20170603044644",
  "word_count": 2450,
  "year": 2017
}

--- a/i/in/ins/instructure.com.html
+++ b/i/in/ins/instructure.com.html
@@ -1,8 +1,15 @@
-<!--The following is the downloaded HTML source of the instructure.com privacy policy that was archived on 2016-11-07.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20161107223220id_/https%3A//www.instructure.com/policies/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the instructure.com privacy policy that was archived on 2017-06-03.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170603044644id_/https%3A//www.instructure.com/policies/privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html lang="en"><head><meta http-equiv="Content-Type" content="text/html;charset=utf-8">
 
+<!-- Google Tag Manager -->
+<script async="" src="//www.google-analytics.com/analytics.js"></script><script async="" src="//www.googletagmanager.com/gtm.js?id=GTM-5GJBWB"></script><script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+'//www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+})(window,document,'script','dataLayer','GTM-5GJBWB');</script>
+<!-- End Google Tag Manager -->
 	<link rel="canonical" href="https://www.instructure.com/policies/privacy">
 	
 
@@ -15,7 +22,7 @@
 
 <title>Privacy</title>
 
-<script type="text/javascript" async="" id="db_ip_api_ua" src="https://api.demandbase.com/api/v2/ip.json?key=550b687a647da0651f1279cbac7b40f4933ddfa3&amp;callback=Demandbase.Connectors.Google_UniversalAnalytics.track&amp;page=https://web.archive.org/web/20161107223220id_/https%3A//www.instructure.com/policies/privacy&amp;referrer="></script><script async="" src="//www.googletagmanager.com/gtm.js?id=GTM-5GJBWB"></script><script async="" src="//www.google-analytics.com/analytics.js"></script><script>
+<script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
         (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
         m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
@@ -31,11 +38,6 @@
 	<!-- Google Tag Manager -->
 	<noscript><iframe src="//www.googletagmanager.com/ns.html?id=GTM-5GJBWB"
 		height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
-		<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-			new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-		j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-		'//www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-	})(window,document,'script','dataLayer','GTM-5GJBWB');</script>
 	<!-- End Google Tag Manager -->
 	<header>
 	<nav id="main-nav-d">
@@ -155,7 +157,7 @@
 					</span></a>
 					<br>
 					<span class="footer-text-3-b">
-						Copyright © 2016, Instructure, Inc.<br>All rights reserved.
+						Copyright © 2017, Instructure, Inc.<br>All rights reserved.
 					</span>
 				</span>
 			</div>
@@ -215,47 +217,6 @@
 	}
 	</script>
 
-	<!-- Start Demandbase / Google Analytics Integration -->
-<!-- This script works along side your current GA integration.
-     Place this script after the standard GA tracking code -->
-<script>
-    'use strict'; var Demandbase = window.Demandbase || {}; Demandbase.Connectors = window.Demandbase.Connectors || {};
-    Demandbase.Connectors.Google_UniversalAnalytics = {
-        name: 'Demandbase Universal Analytics Connector', version: '6.1',
-        key: '550b687a647da0651f1279cbac7b40f4933ddfa3',
-        fields: {
-            1 : 'audience',
-            2 : 'industry',
-            3 : 'employee_range',
-            4 : 'company_name',
-            5 : 'watch_list_relationship',
-            6 : 'audience_segment',
-            7 : 'sub_industry',
-            8 : 'revenue_range',
-            9 : 'demandbase_sid',
-            10 : 'ip',
-            11 : 'web_site',
-            12 : 'watch_list_account_id',
-            13 : 'watch_list_org_type'
-        },
-        pixels: {ad:'',rt:'',cn:''},
-        CompanyProfile: null, gType: null, logging: false,
-        track:function(data) { try { var self = Demandbase.Connectors.Google_UniversalAnalytics, dflt = '(Non-Company Visitor)', awDflt = '(Non-AccountWatch Visitor)'; data = self._flatA(data); self._toGtmDl(data); self.CompanyProfile = data; self._detectG(); for (var field in self.fields) { if (self.fields.hasOwnProperty(field)) { var num = field, lbl = self.fields[field], val = data[self.fields[field]] || dflt, isCompany = (data['company_name'] || dflt) !== dflt; if(data[self.fields[field]] === false) { val = 'false'; } if (lbl.indexOf('watch_list_') !== -1 && isCompany) { val = data[self.fields[field]] || awDflt; } self._var(num, lbl, val.toString()); } } self._event(); } catch (e) { this._logE('Integration Error: ' + e) }; },
-        trackConversion:function() { var id = this.pixels['cn']; if (id) { var img = document.createElement('img'), s = document.getElementsByTagName('body')[0]; img.setAttribute('style', 'display:none'); img.setAttribute('alt', 'conversion pixel'); img.id = 'db_cn_pixel'; img.src = ('https:' == document.location.protocol ? 'https://' : 'http://') + "a.company-target.com/pixel?type=js&id=" + id; if('undefined' === typeof s || !s) { s = document.getElementsByTagName('head')[0]; } s.appendChild(img); this._logE('Loaded Script ' + img.src); } },
-        load:function(){ try { var pg,db=document.createElement('script'); this.loadPixels(); db.type='text/javascript'; db.async=true; db.id='db_ip_api_ua'; pg=document.URL; if(top !== self) { pg=document.referrer; } db.src=('https:'==document.location.protocol?'https://':'http://')+'api.demandbase.com/api/v2/ip.json?key='+this.key+'&callback=Demandbase.Connectors.Google_UniversalAnalytics.track&page='+pg+'&referrer='+document.referrer; var s=document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(db,s); this._logE('Loaded Script ' + db.src); } catch(e){ this._logE('Script Error: '+e)}; },
-        loadPixels: function() { for (var pixel in this.pixels) { if (this.pixels.hasOwnProperty(pixel)) { var id = this.pixels[pixel]; if (id && pixel !== 'cn') { var img = document.createElement('img'), s = document.getElementsByTagName('body')[0]; img.setAttribute('style', 'display:none'); img.setAttribute('alt', 'pixel'); img.id = 'db_' + pixel; img.src = ('https:' == document.location.protocol ? 'https://' : 'http://') + "a.company-target.com/pixel?type=js&id=" + id; if('undefined' === typeof s || !s) { s = document.getElementsByTagName('head')[0]; } s.appendChild(img); this._logE('Loaded Script ' + img.src); } } } },
-        _flatA:function(a){ for(var d in a){ if(typeof a[d]=='object'&&a[d]!==null){ for(var cd in a[d]){a[d+'_'+cd]=a[d][cd]}; delete a[d]; } }; return a; },
-        _logE:function(m){ if(this.logging && typeof(console) !== 'undefined' && window['console'] !== 'undefined') { console.log('DB UA: ' + m); } },
-        _var:function(i,k,v){ if(this.gType === 'ga') { this._p('_setCustomVar', i >> 0, k, v, 1); } else { ga('set','dimension'+i,v); } this._logE(i + ' ' + k +' : ' + v); },
-        _event:function(){ if(this.gType === 'ga') { this._p('_trackEvent', 'Demandbase', 'API Resolution', 'IP API', 0, 1); } else { ga("send", "event", { eventCategory: "Demandbase", eventAction: "API Resolution", eventLabel: "IP Address API", nonInteraction: true }); } this._logE('Sent Custom Event: Demandbase/API Resolution/IP Address API'); },
-        _cEvent:function(c,a,l){ if(this.gType === 'ga') { this._p('_trackEvent', c, a, l, 0, 1); } else { ga("send", "event", { eventCategory: c, eventAction: a, eventLabel: l, nonInteraction: true }); } this._logE('Sent Custom Event:'+c+'/'+a+'/'+l); },
-        _p: function(t, v1, v2, v3, v4, v5) { window._gaq.push([t, v1, v2, v3, v4, v5]); },
-        _toGtmDl: function(data) { if (window.google_tag_manager && window.dataLayer) { dataLayer.push(data); dataLayer.push({ event:"Demandbase_Loaded" }); this._logE('Pushed to GTM dataLayer'); } },
-        _detectG: function() { if(typeof window.ga === 'function') { this.gType = 'ua'; } else if(window._gaq) { this.gType = 'ga'; _gaq.push(['_addDevId', 'NE7T9']); } else { if(!window.ga) window.ga = function(){(ga.q=ga.q||[]).push(arguments)}; this.gType = 'ua'; } this._logE('Detected Google version: ' + this.gType); }
-    };
-    Demandbase.Connectors.Google_UniversalAnalytics.load();
-    /* End Demandbase integration */
-</script>
-<!-- End Demandbase / Google Analytics -->
+	
 
 </body></html>
