--- a/c/cp/cpu/cpubenchmark.net.html
+++ b/c/cp/cpu/cpubenchmark.net.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the cpubenchmark.net privacy policy that was archived on 2016-12-06.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20161206232158id_/http%3A//www.passmark.com/legal/privacy-policy.htm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the cpubenchmark.net privacy policy that was archived on 2017-06-03.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170603074337id_/http%3A//www.passmark.com/legal/privacy-policy.htm) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html><head>
 <title>PassMark Software - Privacy Policy</title>
@@ -12,7 +12,13 @@
 <body topmargin="0" leftmargin="0" bottommargin="0" marginwidth="0" marginheight="0">
 <center>
   <!--ZOOMSTOP-->
-<script type="text/javascript" src="/js/jquery-2.2.4.min.js"></script>
+<script type="text/javascript">
+
+if(typeof jQuery == 'undefined'){
+        document.write('<script type="text/javascript" src="/js/jquery-2.2.4.min.js"></'+'script>');
+  }
+
+</script><script type="text/javascript" src="/js/jquery-2.2.4.min.js"></script>
 <script type="text/javascript" src="/js/dropdown.js"></script>
 <div id="header_pm">
   <table style="width:100%;" class="header_pm">
@@ -138,7 +144,7 @@
   <div class="contentborder"><b class="rbottom"><b class="r4"></b><b class="r3"></b><b class="r2"></b><b class="r1"></b></b></div>
   <!--ZOOMSTOP-->
 <div class="footer" style="text-align:center;">
-Copyright © 2016 PassMark® Software <br>
+Copyright © 2017 PassMark® Software <br>
 <a href="http://www.passmark.com/international.htm">International</a> | <a href="http://www.passmark.com/legal/disclaimer.htm">Disclaimer</a> | <a href="http://www.passmark.com/legal/refund.htm">Refunds</a> | <a href="http://www.passmark.com/legal/privacy-policy.htm">Privacy</a> | <a href="http://www.passmark.com/about/contact_us.htm">Contact Us</a>
 </div>
 <!-- Google Analytics -->
@@ -152,7 +158,7 @@ Copyright © 2016 PassMark® Software <br>
   ga('send', 'pageview');
 
 </script>
-<a href="/sales/specials/index.php" id="specialsCornerPromo"><img src="/images/specials/december_corner.png" alt="Current special"></a><!--ZOOMRESTART--></center>
+<a href="/sales/specials/index.php" id="specialsCornerPromo"><img src="/images/specials/june_corner.png" alt="Current special"></a><!--ZOOMRESTART--></center>
 
 
 </body></html>
