brand-yourself.com (archived on 2017-06-03)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": false,
  "categories": "business;informationtech",
  "char_count": 9881,
  "classifier_probability": 0.98,
  "cross_domain_homepage_redir": true,
  "flesch_ease": "difficult",
  "flesch_kincaid": 13.29,
  "homepage_snapshot_redirected_domain": "brandyourself.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20170606221154id_/https://brandyourself.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20170606185402id_/http%3A//brand-yourself.com",
  "interval": "2017_A",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "brandyourself.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20170603112918id_/https%3A//brandyourself.com/info/about/privacy",
  "policy_title": "Reputation Services, Privacy and Security",
  "policy_url": "brandyourself.com/info/about/privacy",
  "sha1": "21b659346a8758e393720b492ddfb2c3e13668aa",
  "simhash": 9340264433130761877,
  "simhash_updated": true,
  "site_hostname": "brand-yourself.com",
  "site_url": "http://brand-yourself.com",
  "smog": 14.93,
  "strict_updated": true,
  "timestamp": "20170603112918",
  "word_count": 1575,
  "year": 2017
}

--- a/b/br/bra/brand-yourself.com.html
+++ b/b/br/bra/brand-yourself.com.html
@@ -1,27 +1,31 @@
-<!--The following is the downloaded HTML source of the brand-yourself.com privacy policy that was archived on 2016-11-14.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20161114221230id_/https%3A//brandyourself.com/info/about/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the brand-yourself.com privacy policy that was archived on 2017-06-03.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170603112918id_/https%3A//brandyourself.com/info/about/privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html><head>
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 	<title>Reputation Services, Privacy and Security</title>
 <meta name="description" content="Information relating to the reputation services and how user information will be used, it addresses concerns people may have for using the reputation services.">
 <meta name="keywords" content="">
-<meta property="og:title" content="Reputation Services, Privacy and Security">	<meta property="og:url" content="http://brandyourself.com/info/about/privacy">
+<meta property="og:title" content="Reputation Services, Privacy and Security">
+	<meta property="og:url" content="http://brandyourself.com/info/about/privacy">
 	<meta property="og:site_name" content="BrandYourself.com">
 	<meta property="og:image" content="http://brandyourself.com/themes/default/images/fb_icon.png">
 	<meta property="og:share_caption" content="Control what shows up when employers, clients and even dates Google your name – and find out who is Googling you. Create a free account now.">
 	<meta name="google-site-verification" content="jNmt99FOu6TZgqZVnn5cweRSaA1kZTbm5tGZOXdO5DE">
 	<meta name="google-site-verification" content="pS5HzbNac67oUX028rpLLI037IzqtqrULFSImDzzKVU">
-	<meta name="google-site-verification" content="rSa3Uy2sUkFzWaYCNMsQ_wGciRgQMI63p4-5jK-fpnQ">	
+	<meta name="google-site-verification" content="rSa3Uy2sUkFzWaYCNMsQ_wGciRgQMI63p4-5jK-fpnQ">
 	<meta name="google-site-verification" content="Y7DocVxms29r_jZsWxPZeUSl4UyahZ9gW2iwhLdEeUw">
+
+	<link rel="stylesheet" href="/themes/app..20170601104354.css" type="text/css">
+	<script async="" src="//connect.facebook.net/en_US/fbds.js"></script><script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script><script async="" src="//www.google-analytics.com/analytics.js"></script><script async="" src="//www.google-analytics.com/analytics.js"></script><script async="" src="https://www.googletagmanager.com/gtm.js?id=GTM-MGVN38Z"></script><script type="text/javascript" charset="UTF-8" src="/scripts/head.20170601104354.js"></script>
 	
-	<link rel="stylesheet" href="/themes/app.20160913154108.css" type="text/css">	
-	<script async="" src="//connect.facebook.net/en_US/fbds.js"></script><script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script><script async="" src="//www.google-analytics.com/analytics.js"></script><script async="" src="//www.google-analytics.com/analytics.js"></script><script type="text/javascript" charset="UTF-8" src="/scripts/head.20160913154108.js"></script>	
+	<!-- script organization="/brandyourself" src="https://app.buzzbuilderpro.com/assets/website_production.js"></script -->
+
 	<script type="text/javascript">
 		$.user = new User({
 					});
 	</script>
-	
+
 	<script type="application/ld+json">
 		{
 			"@context" : "http://schema.org",
@@ -36,6 +40,14 @@
 		}
 	</script>
 
+	<!-- Google Tag Manager -->
+	<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+	new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+	j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+	'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+	})(window,document,'script','dataLayer','GTM-MGVN38Z');</script>
+	<!-- End Google Tag Manager -->
+
 	<link rel="apple-touch-icon" href="/themes/default/images/ios/flagman-57.png">
 	<link rel="apple-touch-icon" sizes="72x72" href="/themes/default/images/ios/flagman-72.png">
 	<link rel="apple-touch-icon" sizes="114x114" href="/themes/default/images/ios/flagman-114.png">
@@ -47,12 +59,16 @@
 	<![endif]-->
 <script async="true" type="text/javascript" src="https://s.adroll.com/j/roundtrip.js"></script></head>
 <body class="info" id="About"><div id="olark" style="display: none;"><olark><iframe frameborder="0" id="olark-loader"></iframe></olark></div>
-<div id="mainNav" class="homepageNavWrapper static white">
+	<!-- Google Tag Manager (noscript) -->
+	<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-MGVN38Z" height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+	<!-- End Google Tag Manager (noscript) -->
+	
+	<div id="mainNav" class="homepageNavWrapper static white">
 	<div id="navBar"></div>
 	<ul class="homepageNav">
 		<li><a id="navLogoGray" href="/">&nbsp;</a></li>
-		<li><a href="/info/about/howItWorks">Personal</a></li>
-		<li><a href="/info/about/suppressNegatives">Business</a></li>
+		<li><a href="/info/about/howItWorks">DIY Tool</a></li>
+		<li><a href=" /info/about/howItWorks/concierge">Services</a></li>
 		<li><a href="/info/about">About</a></li>
 		<li><a href="/user/login" class="login">Log In</a></li>
 		<li><a href="/signup/popup" class="hasPopup signupLink">Get Started</a></li>
@@ -132,7 +148,8 @@
 		padding-top: 4rem;
 	}
 </style>
-<script type="text/javascript" src="https://d1cdnlzf6usiff.cloudfront.net/ctr/29f516ad140952fe723a3fbfd41d5308bc97a4ad"></script><div id="policy">
+<script type="text/javascript" src="https://d1cdnlzf6usiff.cloudfront.net/ctr/29f516ad140952fe723a3fbfd41d5308bc97a4ad"></script>
+<div id="policy">
 	<h1>Privacy Policy</h1>
 	<h2>Last updated: Nov 21, 2013</h2>
 			
@@ -323,9 +340,12 @@
 				</li>
 				<li><h3>Resources</h3>
 					<ul>
-						<li><a href="/help">Frequently Asked Questions</a></li>
+						<li><a href="/university">BrandYourself University</a></li>
+						<li><a href="/university/guide/faq">Frequently Asked Questions</a></li>
 						<li><a href="/info/about/whyCare">Why Your Google Results Matter</a></li>
 						<li><a href="/online-reputation-management">Online Reputation Management</a></li>
+						<li><a href="/online-reputation-monitoring">Reputation Monitoring</a></li>
+						<li><a href="/online-reputation-repair-what-to-expect">Online Reputation Repair</a></li>
 						<li><a href="/info/about/philosophy">Our SEO Philosophy</a></li>
 						<li><a href="/info/about/privacy">Privacy Policy</a></li>
 						<li><a href="/info/about/terms">Terms of Service</a></li>
@@ -342,12 +362,12 @@
 						<li><a href="http://www.linkedin.com/company/brandyourself">LinkedIn</a></li>
 					</ul>
 				</li>
-				<li><h3><a href="http://blog.brandyourself.com/" target="_blank">Our Blog</a></h3><a href="http://blog.brandyourself.com/" target="_blank">
-					</a><ul><a href="http://blog.brandyourself.com/" target="_blank">
-						</a><li><a href="http://blog.brandyourself.com/" target="_blank"></a><a href="http://blog.brandyourself.com/" target="_blank">All Posts</a></li>
-						<li><a href="http://blog.brandyourself.com/category/brand-yourselfcom/company-news/" target="_blank">Company News</a></li>
-						<li><a href="http://blog.brandyourself.com/category/online-reputation/" target="_blank">Online Reputation</a></li>
-						<li><a href="http://blog.brandyourself.com/category/product-tutorials/personal-branding/" target="_blank">Personal Branding</a></li>
+				<li><h3><a href="http://brandyourself.com/blog/" target="_blank">Our Blog</a></h3><a href="http://brandyourself.com/blog/" target="_blank">
+					</a><ul><a href="http://brandyourself.com/blog/" target="_blank">
+						</a><li><a href="http://brandyourself.com/blog/" target="_blank"></a><a href="http://brandyourself.com/blog/" target="_blank">All Posts</a></li>
+						<li><a href="http://brandyourself.com/blog/category/brand-yourselfcom/company-news/" target="_blank">Company News</a></li>
+						<li><a href="http://brandyourself.com/blog/category/online-reputation/" target="_blank">Online Reputation</a></li>
+						<li><a href="http://brandyourself.com/blog/category/product-tutorials/personal-branding/" target="_blank">Personal Branding</a></li>
 					</ul>
 				</li>
 			</ul>
@@ -367,6 +387,7 @@
 <!-- id="bg-x" -->
 <div class="clear"></div>
 <ul id="popupNotifs"></ul>
+
 	<div id="liveHelp">
 				<div class="top"></div>
 		<div class="tom"></div>
@@ -507,6 +528,7 @@
 	</script>
 	<noscript><img height="1" width="1" alt="" style="display:none" src="https://www.facebook.com/tr?id=443264125831956&amp;ev=PixelInitialized" /></noscript>
 
-<script type="text/javascript" charset="UTF-8" src="/scripts/tail.20160913154108.js"></script>
+<script type="text/javascript" charset="UTF-8" src="/scripts/tail.20170601104354.js"></script>
+
 
 </body></html>
