--- a/f/fa/fam/famouspoetsandpoems.com.html
+++ b/f/fa/fam/famouspoetsandpoems.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the famouspoetsandpoems.com privacy policy that was archived on 2016-12-03.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20161203010931id_/http%3A//www.famouspoetsandpoems.com/privacy_policy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the famouspoetsandpoems.com privacy policy that was archived on 2017-06-03.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170603135752id_/http%3A//famouspoetsandpoems.com/privacy_policy.html) for the most accurate reproduction.-->
 
 <html><head>
 	<title>Privacy Policy - Famous Poets and Poems</title>
