--- a/y/ym/ymc/ymca.net.html
+++ b/y/ym/ymc/ymca.net.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the ymca.net privacy policy that was archived on 2016-12-03.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20161203151412id_/http%3A//www.ymca.net/privacy-policy/index.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the ymca.net privacy policy that was archived on 2017-06-03.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170603145835id_/http%3A//www.ymca.net/privacy-policy/index.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html><head>
 
@@ -38,7 +38,7 @@
 <script src="http://www.ymca.net/sites/default/files/js/js_bw0R6uHiLnBG6DUu48PD1_RBCw-_oHXUZxDBz6qY-mY.js"></script>
 <script src="http://s7.addthis.com/js/250/addthis_widget.js#username=ymcausa"></script>
 <script src="http://www.ymca.net/sites/default/files/js/js_u4vezcyZr6Gwag2Yax-KFhBK9HBsvoqE5z_ewIB0Jdc.js"></script>
-<script>jQuery.extend(Drupal.settings, {"basePath":"\/","pathPrefix":"","ajaxPageState":{"theme":"zen","theme_token":"gr42xrY7dtp10lKr4lqTkW2cKdPTL4YgTak4grkbrx8","js":{"sites\/all\/modules\/custom_specific\/ymca\/js\/search.js":1,"\/\/ajax.googleapis.com\/ajax\/libs\/jquery\/1.8.3\/jquery.min.js":1,"0":1,"misc\/jquery.once.js":1,"misc\/drupal.js":1,"sites\/all\/modules\/addthis_wysiwyg\/addthis_wysiwyg_display.js":1,"http:\/\/s7.addthis.com\/js\/250\/addthis_widget.js#username=ymcausa":1,"sites\/all\/themes\/zen\/global\/menu.js":1,"sites\/all\/themes\/zen\/global\/jquery.menu.js":1,"sites\/all\/themes\/zen\/global\/hint.js":1,"sites\/all\/themes\/zen\/global\/jquery.hint.js":1,"sites\/all\/themes\/zen\/js\/addThisEverywhere.js":1},"css":{"modules\/system\/system.base.css":1,"modules\/system\/system.menus.css":1,"modules\/system\/system.messages.css":1,"modules\/system\/system.theme.css":1,"sites\/all\/modules\/date\/date_api\/date.css":1,"sites\/all\/modules\/date\/date_popup\/themes\/datepicker.1.7.css":1,"modules\/field\/theme\/field.css":1,"sites\/all\/modules\/logintoboggan\/logintoboggan.css":1,"modules\/node\/node.css":1,"modules\/search\/search.css":1,"modules\/user\/user.css":1,"sites\/all\/modules\/views\/css\/views.css":1,"sites\/all\/modules\/ctools\/css\/ctools.css":1,"sites\/all\/modules\/panels\/css\/panels.css":1,"sites\/all\/themes\/zen\/css\/page_content.css":1,"sites\/all\/themes\/zen\/zen-internals\/css\/normalize.css":1,"sites\/all\/themes\/zen\/zen-internals\/css\/wireframes.css":1,"sites\/all\/themes\/zen\/zen-internals\/css\/layouts\/fixed-width.css":1,"sites\/all\/themes\/zen\/zen-internals\/css\/page-backgrounds.css":1,"sites\/all\/themes\/zen\/zen-internals\/css\/tabs.css":1,"sites\/all\/themes\/zen\/zen-internals\/css\/pages.css":1,"sites\/all\/themes\/zen\/zen-internals\/css\/blocks.css":1,"sites\/all\/themes\/zen\/zen-internals\/css\/navigation.css":1,"sites\/all\/themes\/zen\/zen-internals\/css\/views-styles.css":1,"sites\/all\/themes\/zen\/zen-internals\/css\/nodes.css":1,"sites\/all\/themes\/zen\/zen-internals\/css\/comments.css":1,"sites\/all\/themes\/zen\/zen-internals\/css\/forms.css":1,"sites\/all\/themes\/zen\/global\/global.css":1}},"jcarousel":{"ajaxPath":"\/jcarousel\/ajax\/views"}});</script>
+<script>jQuery.extend(Drupal.settings, {"basePath":"\/","pathPrefix":"","ajaxPageState":{"theme":"zen","theme_token":"F3aagxvdEdQqBg8waQ8G5vfwLZGmV_iR5PoxKUQhP4s","js":{"sites\/all\/modules\/custom_specific\/ymca\/js\/search.js":1,"\/\/ajax.googleapis.com\/ajax\/libs\/jquery\/1.8.3\/jquery.min.js":1,"0":1,"misc\/jquery.once.js":1,"misc\/drupal.js":1,"sites\/all\/modules\/addthis_wysiwyg\/addthis_wysiwyg_display.js":1,"http:\/\/s7.addthis.com\/js\/250\/addthis_widget.js#username=ymcausa":1,"sites\/all\/themes\/zen\/global\/menu.js":1,"sites\/all\/themes\/zen\/global\/jquery.menu.js":1,"sites\/all\/themes\/zen\/global\/hint.js":1,"sites\/all\/themes\/zen\/global\/jquery.hint.js":1,"sites\/all\/themes\/zen\/js\/addThisEverywhere.js":1},"css":{"modules\/system\/system.base.css":1,"modules\/system\/system.menus.css":1,"modules\/system\/system.messages.css":1,"modules\/system\/system.theme.css":1,"sites\/all\/modules\/date\/date_api\/date.css":1,"sites\/all\/modules\/date\/date_popup\/themes\/datepicker.1.7.css":1,"modules\/field\/theme\/field.css":1,"sites\/all\/modules\/logintoboggan\/logintoboggan.css":1,"modules\/node\/node.css":1,"modules\/search\/search.css":1,"modules\/user\/user.css":1,"sites\/all\/modules\/views\/css\/views.css":1,"sites\/all\/modules\/ctools\/css\/ctools.css":1,"sites\/all\/modules\/panels\/css\/panels.css":1,"sites\/all\/themes\/zen\/css\/page_content.css":1,"sites\/all\/themes\/zen\/zen-internals\/css\/normalize.css":1,"sites\/all\/themes\/zen\/zen-internals\/css\/wireframes.css":1,"sites\/all\/themes\/zen\/zen-internals\/css\/layouts\/fixed-width.css":1,"sites\/all\/themes\/zen\/zen-internals\/css\/page-backgrounds.css":1,"sites\/all\/themes\/zen\/zen-internals\/css\/tabs.css":1,"sites\/all\/themes\/zen\/zen-internals\/css\/pages.css":1,"sites\/all\/themes\/zen\/zen-internals\/css\/blocks.css":1,"sites\/all\/themes\/zen\/zen-internals\/css\/navigation.css":1,"sites\/all\/themes\/zen\/zen-internals\/css\/views-styles.css":1,"sites\/all\/themes\/zen\/zen-internals\/css\/nodes.css":1,"sites\/all\/themes\/zen\/zen-internals\/css\/comments.css":1,"sites\/all\/themes\/zen\/zen-internals\/css\/forms.css":1,"sites\/all\/themes\/zen\/global\/global.css":1}},"jcarousel":{"ajaxPath":"\/jcarousel\/ajax\/views"}});</script>
 
     <script type="text/javascript" src="http://www.ymca.net/sites/all/themes/zen/js/search-results.js"></script>
 
@@ -84,7 +84,6 @@
       <div id="navbar-main" class="navbar YMCA_THEME_COLOR clearfix">
           <div id="menu-primary-navigation-wrap" class="menu-block-wrapper menu-block-1 menu-name-menu-primary-navigation parent-mlid-0 menu-level-1">
   <ul class="menu"><li class="first expanded menu-mlid-1421 menu-1421"><a href="/about-us" title="">About Us</a><ul><li class="first leaf menu-mlid-3671 menu-3671"><a href="http://www.ymca.net/forabetterus" target="_blank" title="">The Y.™ For a better us.™ </a></li>
-<li class="leaf menu-mlid-3674 menu-3674"><a href="http://www.zoeforpresident.net/" target="_blank" title="">Zoe For President</a></li>
 <li class="leaf menu-mlid-1460 menu-1460"><a href="/contact-us" title="">Contact Us</a></li>
 <li class="leaf menu-mlid-1423 menu-1423"><a href="/find-your-y" title="">Find Your Y</a></li>
 <li class="leaf menu-mlid-1424 menu-1424"><a href="/find-a-y-camp" title="">Find A Y Camp</a></li>
@@ -93,19 +92,20 @@
 <li class="leaf menu-mlid-1422 menu-1422"><a href="/history" title="">History</a></li>
 <li class="last leaf menu-mlid-1426 menu-1426"><a href="/organizational-profile" title="">Organizational Profile</a></li>
 </ul></li>
-<li class="expanded menu-mlid-1428 menu-1428"><a href="/our-focus" title="">Our Focus</a><ul><li class="first expanded menu-mlid-1429 menu-1429"><a href="/youth-development" title="">Youth Development</a><ul><li class="first leaf menu-mlid-3792 menu-3792"><a href="/backpack-buzz" title="">Backpack Buzz</a></li>
-<li class="leaf menu-mlid-1433 menu-1433"><a href="/camp" title="">Camp</a></li>
+<li class="expanded menu-mlid-1428 menu-1428"><a href="/our-focus" title="">Our Focus</a><ul><li class="first expanded menu-mlid-1429 menu-1429"><a href="/youth-development" title="">Youth Development</a><ul><li class="first leaf menu-mlid-1433 menu-1433"><a href="/camp" title="">Camp</a></li>
 <li class="leaf menu-mlid-1430 menu-1430"><a href="/child-care" title="">Child Care</a></li>
 <li class="leaf menu-mlid-1431 menu-1431"><a href="/education-leadership" title="">Education &amp; Leadership</a></li>
-<li class="leaf menu-mlid-1443 menu-1443"><a href="/afterschool-meal-program" title="">Food Programs</a></li>
+<li class="leaf menu-mlid-1443 menu-1443"><a href="/summer-food-program" title="">Food Programs</a></li>
 <li class="leaf menu-mlid-3608 menu-3608"><a href="/letsmoveoutside" title="">Let's Move! Outside</a></li>
 <li class="leaf menu-mlid-3769 menu-3769"><a href="/STEM" title="">STEM</a></li>
+<li class="leaf menu-mlid-3838 menu-3838"><a href="/summer-buzz" title="">Summer Buzz</a></li>
 <li class="last leaf menu-mlid-1432 menu-1432"><a href="/swim-sports-play" title="">Swim, Sports &amp; Play</a></li>
 </ul></li>
 <li class="expanded menu-mlid-1434 menu-1434"><a href="/healthy-living" title="">Healthy Living</a><ul><li class="first leaf menu-mlid-1436 menu-1436"><a href="/family-time" title="">Family Time</a></li>
 <li class="leaf menu-mlid-1439 menu-1439"><a href="/group-interests" title="">Group Interests</a></li>
 <li class="leaf menu-mlid-1437 menu-1437"><a href="/health-wb-fitness" title="">Health, Well-being &amp; Fitness</a></li>
 <li class="leaf menu-mlid-3736 menu-3736"><a href="/healthy-family-home/index.html" title="">Healthy Family Home</a></li>
+<li class="leaf menu-mlid-3823 menu-3823"><a href="/healthy-kids-day" title="">Healthy Kids Day®</a></li>
 <li class="leaf menu-mlid-3306 menu-3306"><a href="/watersafety" title="">Safety Around Water</a></li>
 <li class="last leaf menu-mlid-1438 menu-1438"><a href="/sports-recreation" title="">Sports &amp; Recreation</a></li>
 </ul></li>
@@ -136,9 +136,9 @@
     <div class="search YMCA_THEME_COLOR">
       <input id="edit-keys" name="keys" type="text" class="search-field blur" title="Search" size="14">
       <button type="submit" class="btn-go">Go</button>
-      <input type="hidden" name="form_build_id" value="form-WWixJigrXSxUjNGVHnGER3ZToxLd4vYW7jKWkdYCohs">
+      <input type="hidden" name="form_build_id" value="form-4cpTFsuQUVBwH9GlJfeWpuyi-ozf9wepLt-EMnj9QDc">
       <input type="hidden" name="form_id" value="search_block_form">
-      <input type="hidden" name="form_token" value="47gIf1r8444G5eBUDYjEDd5OOBrGfZ4tyyuNmnaFplc">
+      <input type="hidden" name="form_token" value="MHlU02xzOThGGQksA0GaFqQ6ljl7hjp55ejuHkZ2GBs">
     </div>
   </form>
 </div>
@@ -257,7 +257,6 @@
 
           <div id="menu-primary-navigation-wrap-footer" class="menu-block-wrapper menu-block-3 menu-name-menu-primary-navigation parent-mlid-0 menu-level-1">
   <ul class="menu"><li class="first expanded menu-mlid-1421 menu-1421"><a href="/about-us" title="">About Us</a><ul><li class="first leaf menu-mlid-3671 menu-3671"><a href="http://www.ymca.net/forabetterus" title="">The Y.™ For a better us.™ </a></li>
-<li class="leaf menu-mlid-3674 menu-3674"><a href="http://www.zoeforpresident.net/" title="">Zoe For President</a></li>
 <li class="leaf menu-mlid-1460 menu-1460"><a href="/contact-us" title="">Contact Us</a></li>
 <li class="leaf menu-mlid-1423 menu-1423"><a href="/find-your-y" title="">Find Your Y</a></li>
 <li class="leaf menu-mlid-1424 menu-1424"><a href="/find-a-y-camp" title="">Find A Y Camp</a></li>
@@ -266,19 +265,20 @@
 <li class="leaf menu-mlid-1422 menu-1422"><a href="/history" title="">History</a></li>
 <li class="last leaf menu-mlid-1426 menu-1426"><a href="/organizational-profile" title="">Organizational Profile</a></li>
 </ul></li>
-<li class="expanded menu-mlid-1428 menu-1428"><a href="/our-focus" title="">Our Focus</a><ul><li class="first expanded menu-mlid-1429 menu-1429"><a href="/youth-development" title="">Youth Development</a><ul><li class="first leaf menu-mlid-3792 menu-3792"><a href="/backpack-buzz" title="">Backpack Buzz</a></li>
-<li class="leaf menu-mlid-1433 menu-1433"><a href="/camp" title="">Camp</a></li>
+<li class="expanded menu-mlid-1428 menu-1428"><a href="/our-focus" title="">Our Focus</a><ul><li class="first expanded menu-mlid-1429 menu-1429"><a href="/youth-development" title="">Youth Development</a><ul><li class="first leaf menu-mlid-1433 menu-1433"><a href="/camp" title="">Camp</a></li>
 <li class="leaf menu-mlid-1430 menu-1430"><a href="/child-care" title="">Child Care</a></li>
 <li class="leaf menu-mlid-1431 menu-1431"><a href="/education-leadership" title="">Education &amp; Leadership</a></li>
-<li class="leaf menu-mlid-1443 menu-1443"><a href="/afterschool-meal-program" title="">Food Programs</a></li>
+<li class="leaf menu-mlid-1443 menu-1443"><a href="/summer-food-program" title="">Food Programs</a></li>
 <li class="leaf menu-mlid-3608 menu-3608"><a href="/letsmoveoutside" title="">Let's Move! Outside</a></li>
 <li class="leaf menu-mlid-3769 menu-3769"><a href="/STEM" title="">STEM</a></li>
+<li class="leaf menu-mlid-3838 menu-3838"><a href="/summer-buzz" title="">Summer Buzz</a></li>
 <li class="last leaf menu-mlid-1432 menu-1432"><a href="/swim-sports-play" title="">Swim, Sports &amp; Play</a></li>
 </ul></li>
 <li class="expanded menu-mlid-1434 menu-1434"><a href="/healthy-living" title="">Healthy Living</a><ul><li class="first leaf menu-mlid-1436 menu-1436"><a href="/family-time" title="">Family Time</a></li>
 <li class="leaf menu-mlid-1439 menu-1439"><a href="/group-interests" title="">Group Interests</a></li>
 <li class="leaf menu-mlid-1437 menu-1437"><a href="/health-wb-fitness" title="">Health, Well-being &amp; Fitness</a></li>
 <li class="leaf menu-mlid-3736 menu-3736"><a href="/healthy-family-home/index.html" title="">Healthy Family Home</a></li>
+<li class="leaf menu-mlid-3823 menu-3823"><a href="/healthy-kids-day" title="">Healthy Kids Day®</a></li>
 <li class="leaf menu-mlid-3306 menu-3306"><a href="/watersafety" title="">Safety Around Water</a></li>
 <li class="last leaf menu-mlid-1438 menu-1438"><a href="/sports-recreation" title="">Sports &amp; Recreation</a></li>
 </ul></li>
@@ -309,7 +309,7 @@
       </div><!-- #footer_bottom -->
 
       <p id="copyright">
-        Copyright © 2016 YMCA of the USA. All rights reserved.<br>
+        Copyright © 2017 YMCA of the USA. All rights reserved.<br>
         The YMCA is a nonprofit organization whose mission is to put Christian principles into practice through programs that build healthy spirit, mind and body for all.<br>
       </p>
 
@@ -317,7 +317,7 @@
     </div><!-- /#footer -->
 
   <p class="printblock">
-    Copyright © 2016 YMCA of the USA. All rights reserved.<br>
+    Copyright © 2017 YMCA of the USA. All rights reserved.<br>
     The YMCA is a nonprofit organization whose mission is to put Christian principles into practice through programs that build healthy spirit, mind and body for all.<br>
   </p>
 
