--- a/p/pc/pcr/pcrx.com.html
+++ b/p/pc/pcr/pcrx.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the pcrx.com privacy policy that was archived on 2016-10-13.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20161013061902id_/http%3A//www.pcrx.com/Legal/Privacy.aspx) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the pcrx.com privacy policy that was archived on 2017-06-03.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170603154537id_/http%3A//www.pcrx.com/Legal/Privacy.aspx) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en"><head>
 
@@ -228,7 +228,10 @@
 
 <p>This Privacy Policy may change from time to time and an updated Privacy Policy will be available and accessible on our website. You are responsible for periodically reviewing this Privacy Policy for any applicable changes.</p>
 
-<p><strong>Last Updated:</strong> July 17, 2014</p>
+<h2>GOVERNING LAW AND JURISDICTION</h2>
+<p>Xacti CZ, s.r.o. operates under the regulatory guidelines of the United States of America.</p>
+
+<p><strong>Last Updated:</strong>January 26, 2017</p>
 
 </div>
 
