--- a/a/al/alt/alteredgamer.com.html
+++ b/a/al/alt/alteredgamer.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the alteredgamer.com privacy policy that was archived on 2016-11-29.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20161129203807id_/http%3A//alteredgamer.com/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the alteredgamer.com privacy policy that was archived on 2017-06-03.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170603220739id_/http%3A//www.alteredgamer.com/privacy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN"><html><head>
 <title>alteredgamer.com | Privacy Policy</title>
